--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
     links:
       - mysql:mysql
     container_name: singalweb_app
-    volumes:
-      - ./app:/app
+#    volumes:
+#      - ./app:/app
     ports:
-      - "5002:5000"
+      - "5000:5000"
 
   mysql:
     restart: unless-stopped
@@ -21,8 +21,8 @@ services:
     volumes:
       - ./db:/docker-entrypoint-initdb.d/
 
-    ports:
-      - "3308:3306"
+#    ports:
+#      - "3308:3306"
 
     environment:
       - "MYSQL_ROOT_PASSWORD=12019054Aroot"
